# SAV-BOT-Meuble-de-france

./: .codecov.yml  .env.example  .env.railway  .gitignore  .pre-commit-config.yaml  API_REFERENCE_COMPLETE.md  CATALOGUE_INTEGRATION.md  CHATBOT_ENHANCED_v2.md  DEMARRAGE_RAPIDE.md  FORCE_KILL.bat  GUIDE_CLIENT.md  GUIDE_INSTALLATION_VS_CODE.md  GUIDE_NGROK.md  IMPORTER_PRODUITS.bat  IMPORT_PRODUITS_README.md  INSTALLER.bat  KILL_AND_RESTART.bat  LIRE_MOI.txt  MEUBLE_DE_FRANCE_CAHIER_CHARGES.md  OPENAI_SETUP.md  OUVRIR_CHATBOT.html  PERFORMANCE_REPORT_PYTHON.md  PHASE_1_COMPLETED.md  PHASE_2_COMPLETED.md  PHASE_3_PROGRESS.md  PHASE_4_PARTIE_7_PLAN.md  PHASE_4_PLAN.md  PHASE_4_PROGRESS.md  PRODUCT_CATALOG_UPGRADE.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT_TEMPLATE.md  RAILWAY_DETAILED_DEPLOYMENT_GUIDE.md  RAILWAY_QUICKSTART_CHECKLIST.md  RAPPORT_AUDIT_COMPLET.md  RAPPORT_SCALABILITE_SAV.md  RAPPORT_TEST_COMPLET.md  RAPPORT_VERIFICATION.md  README.md  RESTART_BACKEND.bat  SAV_INTEGRATION.md  (+41 more)
backend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  Flow.txt  alembic.ini  chatbot.db  coverage.xml  init_db.py  migrate_add_voice_emotion.py  migrate_railway_emotion.py  package-lock.json  pyproject.toml  requirements.txt  test_chat_bug.py  test_emotion_detection.py  test_request.json  test_voice_workflow.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20241208_000001_initial_user_and_api_keys.py  20260104_150230_add_ticket_model_for_sav_workflow.py
backend/app/: .gitignore  __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: cache_decorators.py  chatbot_config.py  circuit_breaker.py  config.py  config_backup.py  config_fixed.py  constants.py  env_validator.py  input_sanitizer.py  logging.py  memory_monitor.py  middleware.py  rate_limit.py  redis.py  request_limits.py  secure_static_files.py  security.py  slow_query_logger.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: ticket.py  user.py  warranty.py
backend/app/repositories/: __init__.py  ticket_repository.py
backend/app/services/: catalog_loader.py  chatbot.py  client_summary_generator.py  cloudinary_storage.py  evidence_collector.py  priority_scorer.py  problem_detector.py  product_catalog.py  sav_knowledge.py  sav_workflow_engine.py  (+5 more)
backend/data/: catalog.json  faq.json  sav_scenarios.json
backend/tests/: conftest.py  test_sensitive_logging.py  test_ticket_creation_integration.py  test_validate_fallback.py
(+113 files in other folders)
